# toggl-rofi

./: pyproject.toml  requirements.txt  toggl-rofi.py
src/toggl_rofi/: __init__.py  client.py  editor.py  lib.py  main.py  menus.py  rofi.py
toggl_rofi/: __init__.py  toggl_rofi.py
