[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "toggl-rofi"
description = "Rofi UI for the Toggl Track API"
authors = ["Interitio <cona@thewisewolf.dev>"]
readme = "README.md"
version = "0.2.0a1"
dependencies = [
  "tomllib",
  "toggl.py @ git+ssh://git@github.com/Intery/toggl.py",
]
requires-python = ">= 3.10"

[project.optional-dependencies]
debug = []

